RESOLVED FIXED48286
Fix Cache::dumpStats formatting
https://bugs.webkit.org/show_bug.cgi?id=48286
Summary Fix Cache::dumpStats formatting
Joseph Pecoraro
Reported 2010-10-25 19:49:14 PDT
Cache::dumpStats has columns that are 11 characters wide but PurgeableSize is 13 characters long. Messes up later columns.
Attachments
[PATCH] Make Columns 13 Characters Wide (3.96 KB, patch)
2010-10-25 19:54 PDT, Joseph Pecoraro
no flags
Joseph Pecoraro
Comment 1 2010-10-25 19:54:15 PDT
Created attachment 71837 [details] [PATCH] Make Columns 13 Characters Wide Now, none of the titles are too wide. Sample output: (gdb) p WebCore::cache()->dumpStats() Count Size LiveSize DecodedSize PurgeableSize PurgedSize ------------- ------------- ------------- ------------- ------------- ------------- ------------- Images 38 3965777 3948921 3053452 0 0 CSS 3 66663 66663 0 0 0 XSL 0 0 0 0 0 0 JavaScript 4 406906 406906 0 0 0 Fonts 0 0 0 0 0 0 ------------- ------------- ------------- ------------- ------------- ------------- ------------- Note, there could also be a bunch of improvements to add XBL to this list. However, I don't know anyone that actually uses XBL, so I didn't take the time to add it to the list. Let me know if that is a desired improvement. I don't think this output is actually used anywhere in tests, but I'm running tests overnight anyways to see.
Joseph Pecoraro
Comment 2 2010-10-25 19:58:04 PDT
Nevermind what I said about XBL. I was looking at an outdated file, XBL was recently removed! =)
David Kilzer (:ddkilzer)
Comment 3 2010-10-25 21:05:58 PDT
Comment on attachment 71837 [details] [PATCH] Make Columns 13 Characters Wide r=me
WebKit Commit Bot
Comment 4 2010-10-26 11:30:36 PDT
Comment on attachment 71837 [details] [PATCH] Make Columns 13 Characters Wide Clearing flags on attachment: 71837 Committed r70545: <http://trac.webkit.org/changeset/70545>
WebKit Commit Bot
Comment 5 2010-10-26 11:30:42 PDT
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 6 2010-10-26 12:05:27 PDT
http://trac.webkit.org/changeset/70545 might have broken Qt Linux Release The following tests are not passing: fast/blockflow/floats-in-block-layout.html fast/blockflow/self-collapsing-block.html fast/multicol/nested-columns.html
Joseph Pecoraro
Comment 7 2010-10-26 12:14:11 PDT
(In reply to comment #6) > http://trac.webkit.org/changeset/70545 might have broken Qt Linux Release > The following tests are not passing: > fast/blockflow/floats-in-block-layout.html > fast/blockflow/self-collapsing-block.html > fast/multicol/nested-columns.html Doesn't appear to be related to this change. There were a few other patches that landed at the same time.
Note You need to log in before you can comment on or make changes to this bug.