2010-10-26  Joseph Pecoraro  <joepeck@webkit.org>

Reviewed by David Kilzer.

        Fix Cache::dumpStats formatting
        https://bugs.webkit.org/show_bug.cgi?id=48286

        This updates the column width in the dumpStats output to be wide enough
        for all the titles. Previously one of the titles was too wide and crept
        into later column space.

        * loader/Cache.cpp:
        (WebCore::Cache::dumpStats): make columns 13 characters wide.

Canonical link: https://commits.webkit.org/61077@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70545 268f45cc-cd09-0410-ab3c-d52691b4dbfc